--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "Imperial-Metric Converter",
+	"name": "imperial-metric-converter",
 	"version": "0.0.1",
 	"description": "A microservice for converting between imperial and metric units.",
 	"main": "server.js",
